<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/lblevaluacion"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:text="@string/lblmetodo" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtmetodo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:padding="10dp" 
            android:text="@string/urlmetodoevaluacion"/>
        <requestFocus />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:text="@string/lblnumencuesta" />
    <EditText
        android:id="@+id/txtnumencuesta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:text="@string/lblzona" />
    <EditText
        android:id="@+id/txtzona"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:text="@string/lbltienda" />
    <EditText
        android:id="@+id/txttienda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="consultarevaluacion_click"
        android:text="@string/search" />
    
</LinearLayout>